Adapt upstart to manage the service status
Summary:
1. Change startup scripts to run synchronously
1. Change shutdown scripts to wait for the process stop and force kill
on timeout
1. Modify startup/shutdown scripts in root dir to keep original behavior
1. Modify keygen to exclude troublesome characters

Test Plan: manual test

Reviewers: txchen

Reviewed By: txchen

Subscribers: all

Differential Revision: https://code.silkcloud.info/D642